tests/core/data/csl/TypeLoaderTests/SyntaxErrors/struct6.csl
struct struct6
{
	%string;
}
